@@ -17,6 +17,7 @@ S3method(plot,important_terms)
 S3method(plot,ngram_collocations)
 S3method(plot,tag_co_occurrence)
 S3method(plot,term_count)
+S3method(plot,term_loc)
 S3method(plot,validate_model)
 S3method(print,as_terms)
 S3method(print,coverage)
@@ -74,8 +75,11 @@ export(search_term_collocations)
 export(search_term_which)
 export(split_data)
 export(tag_co_occurrence)
+export(term_after)
+export(term_before)
 export(term_cols)
 export(term_count)
+export(term_first)
 export(uncovered)
 export(unnest_term_list)
 export(update_names)
