@@ -1,4 +1,4 @@
-#' Regular Expression Counts of Terms and Substrings
+#' Counts of Terms and Substrings
 #'
 #' A small suite of functions used to count terms and substrings in strings.
 #' @docType package
