@@ -51,6 +51,8 @@ Most of the functions *count*, *search*, *plot* terms, and *covert* between outp
 | `hierarchical_coverage_regex`| count        | Unique coverage of a text vector by regex         |
 | `ngram_collocations`         | count        | Weighted frequent ngram (2 & 3) collocations      |
 | `word_count`                 | count        | Count words                                       |
+| `term_before`/`term_after`   | count        | Frequency of words before/after a regex term      |
+| `term_first`                 | count        | Frequency of words at the begining of strings     |
 | `colo`                       | search       | Regex output to find term collocations            |
 | `search_term`                | search       | Search for regex terms                            |
 | `search_term_collocations`   | search       | Wrapper for `search_term` + `frequent_terms`      |
@@ -485,7 +487,7 @@ It is often desirable to improve discrimination.  While the bar plot highlightin
 The network plot on the left shows the strength of relationships between tags, while the plot on the right shows the average number of other tags that co-occur with each regex tag.  In this particular case the plot combo is not complex because of the limited number of regex tags.  Note that the edge strength is relative to all other edges.  The strength has to be considered in the context of the average number of other tags that co-occur with each regex tag bar/dot plot on the right.  As the number of tags increases the plot increases in complexity.  The unconnected nodes and shorter bars represent the tags that provide the best discriminatory power, whereas the other tags have the potential to be redundant.
 
 ```{r, impr_disc, fig.width=8}
-tag_co_occurrence(model) %>%
+tag_co_occurrence(model, min.edge.cutoff = .00) %>%
     plot()
 ````
 
