@@ -9,7 +9,7 @@ developed.](http://www.repostatus.org/badges/0.1.0/active.svg)](http://www.repos
 Status](https://travis-ci.org/trinker/termco.svg?branch=master)](https://travis-ci.org/trinker/termco)
 [![Coverage
 Status](https://coveralls.io/repos/trinker/termco/badge.svg?branch=master)](https://coveralls.io/r/trinker/termco?branch=master)
-[![DOI](https://zenodo.org/badge/5398/trinker/termco.svg)](https://zenodo.org/badge/latestdoi/5398/trinker/termco)<a href="https://img.shields.io/badge/Version-0.5.0-orange.svg"><img src="https://img.shields.io/badge/Version-0.5.0-orange.svg" alt="Version"/></a>
+[![DOI](https://zenodo.org/badge/5398/trinker/termco.svg)](https://zenodo.org/badge/latestdoi/5398/trinker/termco)<a href="https://img.shields.io/badge/Version-0.5.1-orange.svg"><img src="https://img.shields.io/badge/Version-0.5.1-orange.svg" alt="Version"/></a>
 </p>
 <img src="inst/termco_logo/r_termco.png" width="200" alt="textproj Logo">
 
@@ -117,6 +117,16 @@ their description:
 <td align="left"><code>word_count</code></td>
 <td align="left">count</td>
 <td align="left">Count words</td>
+</tr>
+<tr class="even">
+<td align="left"><code>term_before</code>/<code>term_after</code></td>
+<td align="left">count</td>
+<td align="left">Frequency of words before/after a regex term</td>
+</tr>
+<tr class="odd">
+<td align="left"><code>term_first</code></td>
+<td align="left">count</td>
+<td align="left">Frequency of words at the begining of strings</td>
 </tr>
 <tr class="even">
 <td align="left"><code>colo</code></td>
@@ -296,7 +306,7 @@ Build Counts Dataframe
     counts
 
     ## Coverage: 100% 
-    ## # A tibble: 10 × 7
+    ## # A tibble: 10 x 7
     ##       person   time n.words response_cries back_channels   summons
     ##       <fctr> <fctr>   <int>          <chr>         <chr>     <chr>
     ## 1      OBAMA time 1    3599        3(.08%)             0 43(1.19%)
@@ -317,7 +327,7 @@ Printing
     print(counts, pretty = FALSE)
 
     ## Coverage: 100% 
-    ## # A tibble: 10 × 7
+    ## # A tibble: 10 x 7
     ##       person   time n.words response_cries back_channels summons
     ##       <fctr> <fctr>   <int>          <int>         <int>   <int>
     ## 1      OBAMA time 1    3599              3             0      43
@@ -335,7 +345,7 @@ Printing
     print(counts, zero.replace = "_")
 
     ## Coverage: 100% 
-    ## # A tibble: 10 × 7
+    ## # A tibble: 10 x 7
     ##       person   time n.words response_cries back_channels   summons
     ##       <fctr> <fctr>   <int>          <chr>         <chr>     <chr>
     ## 1      OBAMA time 1    3599        3(.08%)             _ 43(1.19%)
@@ -604,7 +614,7 @@ are additional observations.
     ## split_data:
     ## 
     ## train: n = 2184
-    ## # A tibble: 6 × 5
+    ## # A tibble: 6 x 5
     ##      person    tot   time      role
     ##      <fctr>  <chr> <fctr>    <fctr>
     ## 1   CROWLEY  230.2 time 2 moderator
@@ -617,7 +627,7 @@ are additional observations.
     ## |...
     ## 
     ## test: n = 728
-    ## # A tibble: 6 × 5
+    ## # A tibble: 6 x 5
     ##   person   tot   time      role
     ##   <fctr> <chr> <fctr>    <fctr>
     ## 1 LEHRER   1.1 time 1 moderator
@@ -639,7 +649,7 @@ Here I show splitting by integer.
     ## split_data:
     ## 
     ## train: n = 100
-    ## # A tibble: 6 × 5
+    ## # A tibble: 6 x 5
     ##   person    tot   time      role
     ##   <fctr>  <chr> <fctr>    <fctr>
     ## 1  OBAMA  102.4 time 2 candidate
@@ -652,7 +662,7 @@ Here I show splitting by integer.
     ## |...
     ## 
     ## test: n = 2812
-    ## # A tibble: 6 × 5
+    ## # A tibble: 6 x 5
     ##   person   tot   time      role
     ##   <fctr> <chr> <fctr>    <fctr>
     ## 1 LEHRER   1.1 time 1 moderator
@@ -914,7 +924,7 @@ of observation which gives the researcher the observation level counts.
     model
 
     ## Coverage: 13.02% 
-    ## # A tibble: 2,912 × 6
+    ## # A tibble: 2,912 x 6
     ##       id n.words response_cries back_channels summons justification
     ##    <int>   <int>          <int>         <int>   <int>         <int>
     ## 1      1      10              0             0       0             0
@@ -1289,7 +1299,7 @@ tags increases the plot increases in complexity. The unconnected nodes
 and shorter bars represent the tags that provide the best discriminatory
 power, whereas the other tags have the potential to be redundant.
 
-    tag_co_occurrence(model) %>%
+    tag_co_occurrence(model, min.edge.cutoff = .00) %>%
         plot()
 
 ![](inst/figure/impr_disc-1.png)
@@ -1319,7 +1329,7 @@ may be returned) as well as a `table` and plot of the counts. Use
 
     ## .
     ##  back_channels  justification response_cries        summons 
-    ##              6            122             16            235
+    ##              6            129             16            228
 
     classify(model) %>%
         unlist() %>%
@@ -1397,11 +1407,11 @@ Below we create fake "known" tags to test `evaluate` with real data
     ## ------------------------------------------------ 
     ##            tag precision recall F_score accuracy
     ##  back_channels     1.000  1.000   1.000    1.000
-    ##  justification      .900  1.000    .947     .996
+    ##  justification      .904  1.000    .950     .996
     ##  No_Code_Given      .896  1.000    .945     .909
     ##   random noise      .000   .000    .000     .897
     ## response_cries      .812  1.000    .897     .999
-    ##        summons      .911  1.000    .954     .993
+    ##        summons      .909  1.000    .953     .993
     ## 
     ## -------------------- 
     ## Summary Measures
@@ -1410,8 +1420,8 @@ Below we create fake "known" tags to test `evaluate` with real data
     ## 
     ## Macro-Averaged  
     ##   Accuracy:     .966
-    ##   F-score:      .790
-    ##   Precision:    .753
+    ##   F-score:      .791
+    ##   Precision:    .754
     ##   Recall:       .833
     ## 
     ## Micro-Averaged  
